src/test/deca/context/valid/created/assign-conv-float.deca
//Description :
// Test d'une addition de int et float
//
// Resultats :
//


{
    float x = 1 + 2.0;
    float y = 1.0 + 2;
}
