src/test/deca/context/invalid/created/addObjects.deca
//Description :
// Test d'une addition d'objets
//
// Resultats :
// Erreur

class A {
    int a;
    protected int b = 2;

}

{
    A a = new A();
    A b = new A();

    a + b;
}
